--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
 <title>12 Bubbles</title>
 <style>
 html, body {
-  margin:0; padding:0; height:100vh; overflow:hidden;
+  margin:0; padding:0; height:100%; width:100%;
   font-family: monospace; background-color:#0a0a0a; color:#fff;
   display:flex; justify-content:center; align-items:center;
+  overflow:hidden;
 }
 
 /* --- LOADING SCREEN --- */
@@ -25,14 +26,16 @@ html, body {
 }
 
 /* --- HOME SCREEN --- */
-#startBtn, #indexBtn {
-  display:none; margin:0 auto; font-size:32px; padding:15px 40px;
+#homeScreen {
+  display:flex; flex-direction:column; align-items:center; gap:20px;
+}
+#homeScreen button {
+  font-size:32px; padding:15px 40px;
   background: linear-gradient(45deg,#a044ff,#6a00f4,#d166ff);
   border:none; border-radius:12px; color:#fff; font-weight:bold;
-  text-transform:uppercase; cursor:pointer; box-shadow:0 0 10px #d166ff,0 0 20px #a044ff;
+  text-transform:uppercase; cursor:pointer;
+  box-shadow:0 0 10px #d166ff,0 0 20px #a044ff;
 }
-#startBtn { margin-top:20vh; }
-#indexBtn { margin-top:20px; }
 
 /* --- DIFFICULTY --- */
 #difficultyMenu {
@@ -44,7 +47,16 @@ html, body {
   font-size:28px; padding:15px 35px; display:block; margin:auto;
 }
 
-/* --- Countdown & Score --- */
+/* --- INDEX PANEL --- */
+#indexPanel {
+  position:fixed; top:100%; left:0; width:100%; max-height:70%;
+  background:rgba(10,10,10,0.95); overflow-y:auto; transition:top 0.5s ease;
+  padding:20px; z-index:999; box-shadow:0 -5px 30px #d166ff;
+}
+#indexPanel h2 { text-transform:uppercase; }
+#indexPanel .closeBtn { position:absolute; top:15px; right:15px; font-size:28px; cursor:pointer; color:#fff; font-weight:bold; z-index:1001; }
+
+/* --- COUNTDOWN & SCORE --- */
 #countdown {
   position:fixed; top:50%; left:50%;
   transform:translate(-50%,-50%); font-size:100px; color:#d166ff;
@@ -58,7 +70,7 @@ html, body {
 #score { font-size:36px; color:#d166ff; }
 #lives { font-size:28px; color:#f00; margin-top:5px; }
 
-/* --- Bubbles --- */
+/* --- BUBBLES --- */
 .bubble {
   width:80px; height:80px; border-radius:50%;
   display:flex; justify-content:center; align-items:center;
@@ -67,33 +79,8 @@ html, body {
   border:2px solid #d166ff; box-shadow:0 0 10px #d166ff,0 0 20px #a044ff inset;
   position:absolute; cursor:pointer;
 }
-.bubble.rare2x { background: linear-gradient(135deg,#ffff00,#a044ff); color:#000; font-size:30px; }
-.bubble.rare144 { background: linear-gradient(135deg,#0f0,#0a0); color:#000; font-size:30px; }
-.bubble.triple { background: linear-gradient(135deg,#f0f,#a0a); color:#fff; font-size:28px; }
-.bubble.gravity { background: linear-gradient(135deg,#fff,#d166ff); color:#000; font-size:30px; }
-.bubble.invert { background: linear-gradient(135deg,#fff,#000); color:#0ff; font-size:28px; }
-.bubble.instawin { background: linear-gradient(135deg,#ff0000,#ffff00); color:#000; font-size:32px; box-shadow:0 0 30px #ff0, 0 0 60px #f00; }
 
-/* --- Index Panel --- */
-#indexPanel {
-  position:fixed; top:100%; left:0; width:100%; max-height:70%;
-  background:rgba(10,10,10,0.95); overflow-y:auto; transition:top 0.5s ease;
-  padding:20px; z-index:999; box-shadow:0 -5px 30px #d166ff;
-}
-#indexPanel h2 { text-transform:uppercase; }
-#indexPanel .closeBtn { position:absolute; top:15px; right:15px; font-size:28px; cursor:pointer; color:#fff; font-weight:bold; z-index:1001; }
-.indexItem { display:flex; align-items:center; margin:10px 0; }
-.indexItem .bubbleImg {
-  width:60px; height:60px; margin-right:15px; border-radius:50%;
-  display:flex; justify-content:center; align-items:center; font-weight:bold;
-  color:#fff; border:2px solid #d166ff; box-shadow:0 0 15px #d166ff inset;
-  animation:float 1s infinite alternate;
-}
-.indexItem .desc { flex:1; }
-.indexItem .rarity { font-weight:bold; }
-@keyframes float { 0%{transform:translateY(0);} 100%{transform:translateY(-10px);} }
-
-/* --- End Screen --- */
+/* --- END SCREEN --- */
 #endScreen {
   position:fixed; top:0; left:0; width:100%; height:100%;
   background:rgba(0,0,0,0.9); display:none; flex-direction:column;
@@ -105,32 +92,16 @@ html, body {
   cursor:pointer; color:#fff; background: linear-gradient(45deg,#a044ff,#6a00f4,#d166ff);
   box-shadow:0 0 10px #d166ff,0 0 20px #a044ff;
 }
-
-/* --- Pause --- */
-#pauseBtn { position:fixed; top:10px; right:10px; font-size:50px; color:#fff; cursor:pointer; z-index:1002; display:none; }
-#pauseScreen {
-  position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.9);
-  display:none; flex-direction:column; justify-content:center; align-items:center; color:#fff; font-size:40px;
-  z-index:2000; text-align:center;
-}
-#pauseScreen button { margin:10px; font-size:28px; padding:15px 40px; }
-
-/* --- Easter Egg --- */
-#easterEgg {
-  position: fixed; top: 0; left:0; width:100%; height:100%;
-  background:rgba(0,0,0,0.9); color:red; font-size:150px; font-weight:bold;
-  display:flex; justify-content:center; align-items:center; z-index:2000; display:none;
-  text-transform:uppercase; opacity:0; animation:fadeShake 5s forwards;
-}
-@keyframes fadeShake {0%{opacity:0;}10%{opacity:1;transform:translateX(-5px);}20%{transform:translateX(5px);}30%{transform:translateX(-5px);}40%{transform:translateX(5px);}50%{transform:translateX(-5px);}60%{transform:translateX(5px);}70%{transform:translateX(-5px);}80%{transform:translateX(5px);}90%{transform:translateX(-5px);}100%{opacity:0;transform:translateX(0);}}
 </style>
 </head>
 <body>
 
 <div id="loadingScreen">Level 12 Studio</div>
 
-<button id="startBtn">START</button>
-<button id="indexBtn">INDEX</button>
+<div id="homeScreen">
+  <button id="startBtn">START</button>
+  <button id="indexBtn">INDEX</button>
+</div>
 
 <div id="difficultyMenu">
   <button data-diff="easy">EASY</button>
@@ -142,13 +113,7 @@ html, body {
 <div id="indexPanel">
   <div class="closeBtn">✖</div>
   <h2>BUBBLES INDEX</h2>
-  <div class="indexItem"><div class="bubbleImg">12</div><div class="desc"><span class="rarity">Common:</span> +1 score</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ffff00,#a044ff); color:#000;">12×2</div><div class="desc"><span class="rarity">Rare 0.25%:</span> Doubles score</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#0f0,#0a0); color:#000;">12²</div><div class="desc"><span class="rarity">Rare 1%:</span> +144 score</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#f0f,#a0a);">3×12</div><div class="desc"><span class="rarity">Rare 2%:</span> Spawns 3 bubbles</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#fff,#d166ff); color:#000;">&lt;12&gt;</div><div class="desc"><span class="rarity">Rare 3%:</span> Gravity bubble pulls all bubbles</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#fff,#000); color:#0ff;">!12!</div><div class="desc"><span class="rarity">Rare 1.5%:</span> Inverts screen 5 sec +10 score</div></div>
-  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ff0000,#ffff00); color:#000; box-shadow:0 0 30px #ff0,0 0 60px #f00;">?12?</div><div class="desc"><span class="rarity">Rare 0.1%:</span> Instant win (+999,999,999 score)</div></div>
+  <p>Index content goes here...</p>
 </div>
 
 <div id="countdown"></div>
@@ -163,71 +128,42 @@ html, body {
   <button id="continueBtn">CONTINUE</button>
 </div>
 
-<div id="pauseBtn">||</div>
-<div id="pauseScreen">
-  <button id="continueGameBtn">CONTINUE</button>
-  <button id="endGameBtn">END</button>
-</div>
-
-<div id="easterEgg"></div>
-<audio id="popSound" src="https://www.soundjay.com/button/sounds/button-16.mp3"></audio>
-
 <script>
-// --- VARIABLES ---
-const startBtn=document.getElementById('startBtn');
-const indexBtn=document.getElementById('indexBtn');
-const indexPanel=document.getElementById('indexPanel');
-const closeBtn=document.querySelector('#indexPanel .closeBtn');
-const difficultyMenu=document.getElementById('difficultyMenu');
-const backBtn=document.getElementById('backBtn');
-const countdownEl=document.getElementById('countdown');
-const scoreContainer=document.getElementById('scoreContainer');
-const scoreEl=document.getElementById('score');
-const highscoreEl=document.getElementById('highscore');
-const livesEl=document.getElementById('lives');
-const endScreen=document.getElementById('endScreen');
-const continueBtn=document.getElementById('continueBtn');
-const pauseBtn=document.getElementById('pauseBtn');
-const pauseScreen=document.getElementById('pauseScreen');
-const continueGameBtn=document.getElementById('continueGameBtn');
-const endGameBtn=document.getElementById('endGameBtn');
-const easterEl=document.getElementById('easterEgg');
-const popSound=document.getElementById('popSound');
-const loadingScreen=document.getElementById('loadingScreen');
+const loadingScreen = document.getElementById('loadingScreen');
+const homeScreen = document.getElementById('homeScreen');
+const startBtn = document.getElementById('startBtn');
+const indexBtn = document.getElementById('indexBtn');
+const difficultyMenu = document.getElementById('difficultyMenu');
+const backBtn = document.getElementById('backBtn');
+const indexPanel = document.getElementById('indexPanel');
+const closeBtn = document.querySelector('#indexPanel .closeBtn');
+const countdownEl = document.getElementById('countdown');
+const scoreContainer = document.getElementById('scoreContainer');
+const scoreEl = document.getElementById('score');
+const highscoreEl = document.getElementById('highscore');
+const livesEl = document.getElementById('lives');
+const endScreen = document.getElementById('endScreen');
+const continueBtn = document.getElementById('continueBtn');
 
-let score=0, highscore=0, lives=3, bubbles=[], gameRunning=false, gamePaused=false, spawnSpeed=500, speedFactor=1, startTime;
+let score = 0, highscore = 0, lives = 3, bubbles = [], gameRunning=false;
 
 // --- LOADING ---
 window.addEventListener('load',()=>{
   setTimeout(()=>{
     loadingScreen.style.display='none';
-    startBtn.style.display='block';
-    indexBtn.style.display='block';
-    attachButtonEvents();
+    homeScreen.style.display='flex';
   },2000);
 });
 
-// --- BUTTON EVENTS ---
-function attachButtonEvents(){
-  startBtn.onclick=()=>{startBtn.style.display='none'; indexBtn.style.display='none'; difficultyMenu.style.display='flex';};
-  backBtn.onclick=()=>{difficultyMenu.style.display='none'; startBtn.style.display='block'; indexBtn.style.display='block';};
-  indexBtn.onclick=()=>{indexPanel.style.top='30%'; startBtn.style.display='none'; indexBtn.style.display='none';};
-  closeBtn.onclick=()=>{indexPanel.style.top='100%'; startBtn.style.display='block'; indexBtn.style.display='block';};
-  continueBtn.onclick=()=>{endScreen.style.display='none'; startBtn.style.display='block'; indexBtn.style.display='block';};
-  continueGameBtn.onclick=()=>{gamePaused=false; pauseScreen.style.display='none'; requestAnimationFrame(updateBubbles);};
-  endGameBtn.onclick=()=>{gamePaused=false; pauseScreen.style.display='none'; endGame();};
-  pauseBtn.onclick=()=>{gamePaused=true; pauseScreen.style.display='flex';};
-  window.addEventListener('blur',()=>{if(gameRunning){gamePaused=true; pauseScreen.style.display='flex';}});
-  window.addEventListener('focus',()=>{if(gameRunning && gamePaused){gamePaused=false; pauseScreen.style.display='none'; requestAnimationFrame(updateBubbles);}});
-}
+// --- HOME BUTTONS ---
+startBtn.onclick = ()=>{ homeScreen.style.display='none'; difficultyMenu.style.display='flex'; };
+indexBtn.onclick = ()=>{ indexPanel.style.top='30%'; homeScreen.style.display='none'; };
+closeBtn.onclick = ()=>{ indexPanel.style.top='100%'; homeScreen.style.display='flex'; };
+backBtn.onclick = ()=>{ difficultyMenu.style.display='none'; homeScreen.style.display='flex'; };
 
 // --- DIFFICULTY ---
 difficultyMenu.querySelectorAll('button[data-diff]').forEach(btn=>{
-  btn.onclick=()=>{
-    const diff=btn.dataset.diff;
-    if(diff==='easy'){spawnSpeed=800; speedFactor=0.8;}
-    else if(diff==='normal'){spawnSpeed=500; speedFactor=1;}
-    else if(diff==='hard'){spawnSpeed=300; speedFactor=1.5;}
+  btn.onclick = ()=>{
     difficultyMenu.style.display='none';
     startCountdown();
   };
@@ -236,52 +172,64 @@ difficultyMenu.querySelectorAll('button[data-diff]').forEach(btn=>{
 // --- COUNTDOWN ---
 function startCountdown(){
   countdownEl.style.display='block';
-  let count=3; countdownEl.textContent=count;
-  const interval=setInterval(()=>{
-    count--; if(count>0) countdownEl.textContent=count;
-    else{ clearInterval(interval); countdownEl.style.display='none'; scoreContainer.style.display='block'; pauseBtn.style.display='block'; startGame(); }
+  let count = 3;
+  countdownEl.textContent = count;
+  const interval = setInterval(()=>{
+    count--;
+    if(count>0) countdownEl.textContent=count;
+    else{
+      clearInterval(interval);
+      countdownEl.style.display='none';
+      scoreContainer.style.display='block';
+      startGame();
+    }
   },1000);
 }
 
 // --- GAME LOGIC ---
 function startGame(){
-  score=0;lives=3;bubbles=[];gameRunning=true;startTime=Date.now();
-  scoreEl.textContent="Score: "+score;livesEl.textContent="Lives: "+lives;
+  score = 0; lives = 3; bubbles = []; gameRunning=true;
+  scoreEl.textContent = "Score: "+score; livesEl.textContent = "Lives: "+lives;
   spawnBubble();
   requestAnimationFrame(updateBubbles);
 }
 
 function spawnBubble(){
-  if(!gameRunning || gamePaused) return;
-  const bubble=document.createElement('div'); bubble.classList.add('bubble'); bubble.textContent='12'; bubble.dataset.type='normal';
-  const size=Math.random()*60+60; bubble.style.width=size+'px'; bubble.style.height=size+'px'; bubble.style.fontSize=size/3+'px';
-  bubble.style.left=Math.random()*(window.innerWidth-size)+'px'; bubble.style.top=(window.innerHeight-size)+'px';
-  bubble.dataset.speed=(Math.random()*1.5+1)*speedFactor;
+  if(!gameRunning) return;
+  const bubble = document.createElement('div');
+  bubble.classList.add('bubble'); bubble.textContent='12';
+  bubble.style.width = '80px'; bubble.style.height='80px';
+  bubble.style.left = Math.random()*(window.innerWidth-80)+'px';
+  bubble.style.top = window.innerHeight+'px';
+  bubble.dataset.speed = 2;
   document.body.appendChild(bubble);
-  bubble.addEventListener('click',()=>{
-    if(!gameRunning) return; score++; scoreEl.textContent="Score: "+score; bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble); if(score>highscore){highscore=score;highscoreEl.textContent="High Score: "+highscore;} popSound.currentTime=0; popSound.play();
-  });
+  bubble.onclick = ()=>{
+    if(!gameRunning) return;
+    score++; scoreEl.textContent="Score: "+score;
+    bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble);
+    if(score>highscore){ highscore=score; highscoreEl.textContent="High Score: "+highscore;}
+  };
   bubbles.push(bubble);
-  setTimeout(spawnBubble,spawnSpeed);
+  setTimeout(spawnBubble,500);
 }
 
 function updateBubbles(){
-  if(!gameRunning || gamePaused) return;
-  bubbles.forEach(bubble=>{
-    const top=parseFloat(bubble.style.top);
-    bubble.style.top=top-parseFloat(bubble.dataset.speed)+'px';
-    if(top<=0){ lives--; livesEl.textContent="Lives: "+lives; bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble); if(lives<=0) endGame();}
+  if(!gameRunning) return;
+  bubbles.forEach(b=>{
+    const top = parseFloat(b.style.top);
+    b.style.top = top - parseFloat(b.dataset.speed)+'px';
+    if(top<=0){ lives--; livesEl.textContent="Lives: "+lives; b.remove(); bubbles=bubbles.filter(x=>x!==b); if(lives<=0) endGame();}
   });
   requestAnimationFrame(updateBubbles);
 }
 
 function endGame(){
   gameRunning=false; bubbles.forEach(b=>b.remove()); bubbles=[];
-  scoreContainer.style.display='none'; pauseBtn.style.display='none';
-  showEndScreen();
+  scoreContainer.style.display='none';
+  endScreen.style.display='flex';
 }
 
-function showEndScreen(){document.getElementById('finalScoreText').textContent="Your Score: "+score; endScreen.style.display='flex';}
+continueBtn.onclick = ()=>{ endScreen.style.display='none'; homeScreen.style.display='flex'; };
 </script>
 </body>
 </html>
