--- a/index.html
+++ b/index.html
@@ -7,17 +7,14 @@
 <style>
 html, body {
   margin:0; padding:0; height:100vh; overflow:hidden;
-  font-family: monospace;
-  background-color:#0a0a0a;
-  color:#fff;
+  font-family: monospace; background-color:#0a0a0a; color:#fff;
 }
 
-/* --- LOADING SCREEN --- */
+/* Loading Screen */
 #loadingScreen {
   position: fixed; top:0; left:0; width:100%; height:100%;
   background:#000; display:flex; justify-content:center; align-items:center;
-  color:#fff; font-size:50px; font-weight:bold; z-index:3000;
-  text-align:center;
+  color:#fff; font-size:50px; font-weight:bold; z-index:3000; text-align:center;
   animation:eyeGlow 2s ease-in-out forwards;
 }
 @keyframes eyeGlow {
@@ -26,7 +23,7 @@ html, body {
   100% { opacity:0.2; text-shadow:none; }
 }
 
-/* --- BUTTONS --- */
+/* Buttons */
 button {
   font-size:28px; padding:15px 35px; margin:10px; border:none; border-radius:12px; color:#fff;
   font-weight:bold; text-transform:uppercase; cursor:pointer; 
@@ -34,44 +31,42 @@ button {
   box-shadow:0 0 10px #d166ff,0 0 20px #a044ff;
 }
 
-/* --- HOME SCREEN --- */
+/* Home Screen */
 #homeScreen {
   display:flex; flex-direction:column; align-items:center; justify-content:center;
   position:fixed; top:0; left:0; width:100%; height:100%; z-index:1000;
 }
+
+/* Difficulty Selection */
 #diffSelection {
   display:none; flex-direction:column; align-items:center; justify-content:center;
 }
 
-/* --- Countdown & Score --- */
+/* Countdown & Score */
 #countdown {
-  position:fixed; top:50%; left:50%;
-  transform:translate(-50%,-50%);
-  font-size:80px; color:#d166ff;
-  text-shadow:0 0 20px #d166ff,0 0 40px #a044ff;
+  position:fixed; top:50%; left:50%; transform:translate(-50%,-50%);
+  font-size:80px; color:#d166ff; text-shadow:0 0 20px #d166ff,0 0 40px #a044ff;
   z-index:1001; display:none;
 }
 #scoreContainer {
-  position:fixed; top:10px; left:50%;
-  transform:translateX(-50%);
+  position:fixed; top:10px; left:50%; transform:translateX(-50%);
   z-index:1001; text-align:center; display:none;
 }
 #highscore { font-size:20px; color:#ff0; margin-bottom:5px; }
 #score { font-size:28px; color:#d166ff; }
 #lives { font-size:20px; color:#f00; margin-top:5px; }
 
-/* --- Pause Button --- */
+/* Pause Button */
 #pauseBtn {
   position:fixed; top:10px; right:10px; z-index:1001;
-  font-size:28px; padding:15px 20px;
-  border:none; border-radius:12px; color:#fff;
+  font-size:28px; padding:15px 20px; border:none; border-radius:12px; color:#fff;
   font-weight:bold; text-transform:uppercase; cursor:pointer; 
   background: linear-gradient(45deg,#a044ff,#6a00f4,#d166ff);
   box-shadow:0 0 10px #d166ff,0 0 20px #a044ff;
   display:none;
 }
 
-/* --- Bubbles --- */
+/* Bubbles */
 .bubble {
   width:80px; height:80px; border-radius:50%;
   display:flex; justify-content:center; align-items:center;
@@ -80,8 +75,14 @@ button {
   border:2px solid #d166ff; box-shadow:0 0 10px #d166ff,0 0 20px #a044ff inset;
   position:absolute; cursor:pointer;
 }
+.bubble.rare2x { background: linear-gradient(135deg,#ffff00,#a044ff); color:#000; font-size:28px; }
+.bubble.rare144 { background: linear-gradient(135deg,#0f0,#0a0); color:#000; font-size:28px; }
+.bubble.triple { background: linear-gradient(135deg,#f0f,#a0a); color:#fff; font-size:24px; }
+.bubble.gravity { background: linear-gradient(135deg,#fff,#d166ff); color:#000; font-size:28px; }
+.bubble.invert { background: linear-gradient(135deg,#fff,#000); color:#0ff; font-size:26px; }
+.bubble.instawin { background: linear-gradient(135deg,#ff0000,#ffff00); color:#000; font-size:32px; box-shadow:0 0 30px #ff0, 0 0 60px #f00; }
 
-/* --- Index Panel --- */
+/* Index Panel */
 #indexPanel {
   position:fixed; top:100%; left:0; width:100%; max-height:70%; background:rgba(10,10,10,0.95);
   overflow-y:auto; transition:top 0.5s ease; padding:20px; z-index:999; box-shadow:0 -5px 30px #d166ff;
@@ -91,8 +92,17 @@ button {
   position:absolute; top:15px; right:15px; font-size:28px; cursor:pointer;
   color:#fff; font-weight:bold; z-index:1001;
 }
+.indexItem { display:flex; align-items:center; margin:10px 0; }
+.indexItem .bubbleImg {
+  width:60px; height:60px; margin-right:15px; border-radius:50%;
+  display:flex; justify-content:center; align-items:center; font-weight:bold; color:#fff;
+  border:2px solid #d166ff; box-shadow:0 0 15px #d166ff inset; animation:float 1s infinite alternate;
+}
+.indexItem .desc { flex:1; }
+.indexItem .rarity { font-weight:bold; }
+@keyframes float { 0%{transform:translateY(0);} 100%{transform:translateY(-10px);} }
 
-/* --- End Screen --- */
+/* End Screen */
 #endScreen {
   position:fixed; top:0; left:0; width:100%; height:100%;
   background:rgba(0,0,0,0.9); display:none; flex-direction:column;
@@ -100,14 +110,14 @@ button {
   z-index:1500; text-align:center;
 }
 
-/* --- Pause Screen --- */
+/* Pause Screen */
 #pauseScreen {
   display:none; position:fixed; top:0; left:0; width:100%; height:100%;
   background:rgba(0,0,0,0.9); color:#fff; display:flex; flex-direction:column; justify-content:center; align-items:center; z-index:2000;
 }
 #pauseScreen div { margin-bottom:20px; text-align:center; }
 
-/* --- Easter Egg --- */
+/* Easter Egg */
 #easterEgg {
   position: fixed; top: 0; left:0; width:100%; height:100%;
   background:rgba(0,0,0,0.9); color:red; font-size:150px;
@@ -132,16 +142,13 @@ button {
 </head>
 <body>
 
-<!-- Loading Screen -->
 <div id="loadingScreen">Level 12 studio</div>
 
-<!-- Home Screen -->
 <div id="homeScreen">
   <button id="startBtn">START</button>
   <button id="indexBtn">INDEX</button>
 </div>
 
-<!-- Difficulty Selection -->
 <div id="diffSelection">
   <button class="diffBtn" data-diff="easy">EASY</button>
   <button class="diffBtn" data-diff="medium">MEDIUM</button>
@@ -149,14 +156,18 @@ button {
   <button id="backBtn">BACK</button>
 </div>
 
-<!-- Index Panel -->
 <div id="indexPanel">
   <div class="closeBtn">✖</div>
   <h2>BUBBLES INDEX</h2>
-  <!-- ... index items ... -->
+  <div class="indexItem"><div class="bubbleImg">12</div><div class="desc"><span class="rarity">Normal:</span> +1 score</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ffff00,#a044ff); color:#000;">12×2</div><div class="desc"><span class="rarity">Rare 0.25%:</span> Doubles score</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#0f0,#0a0); color:#000;">12²</div><div class="desc"><span class="rarity">Rare 1%:</span> +144 score</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#f0f,#a0a);">3×12</div><div class="desc"><span class="rarity">Rare 2%:</span> Spawns 3 bubbles</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#fff,#d166ff); color:#000;">&lt;12&gt;</div><div class="desc"><span class="rarity">Rare 3%:</span> Gravity bubble moves all bubbles</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#fff,#000); color:#0ff;">!12!</div><div class="desc"><span class="rarity">Rare 1.5%:</span> Inverts colors and gives +10 score</div></div>
+  <div class="indexItem"><div class="bubbleImg" style="background: linear-gradient(135deg,#ff0000,#ffff00); color:#000; box-shadow:0 0 30px #ff0,0 0 60px #f00;">?12?</div><div class="desc"><span class="rarity">Rare 0.1%:</span> Instant win (+999,999,999 score)</div></div>
 </div>
 
-<!-- Game UI -->
 <div id="countdown"></div>
 <div id="scoreContainer">
   <div id="highscore">Highscore: 0</div>
@@ -165,7 +176,6 @@ button {
 </div>
 <button id="pauseBtn">PAUSE</button>
 
-<!-- Pause Screen -->
 <div id="pauseScreen">
   <div style="font-size:50px;">Game Paused</div>
   <div id="currentScorePause" style="font-size:30px;">Score: 0</div>
@@ -173,7 +183,6 @@ button {
   <button id="endGamePauseBtn">END GAME</button>
 </div>
 
-<!-- End Screen -->
 <div id="endScreen">
   <div id="finalScoreText"></div>
   <button id="continueBtn">CONTINUE</button>
@@ -206,10 +215,11 @@ const endScreen = document.getElementById('endScreen');
 const finalScoreText = document.getElementById('finalScoreText');
 const continueBtn = document.getElementById('continueBtn');
 const popSound = document.getElementById('popSound');
+const easterEl = document.getElementById('easterEgg');
 
 let score=0, highscore=0, lives=3, bubbles=[], gameRunning=false, paused=false, startTime, difficulty=1;
 
-// --- Loading ---
+// Loading Screen
 window.addEventListener('load',()=>{
   setTimeout(()=>{
     loadingScreen.style.display='none';
@@ -217,7 +227,7 @@ window.addEventListener('load',()=>{
   },2000);
 });
 
-// --- Home / Difficulty ---
+// Home / Difficulty
 startBtn.addEventListener('click',()=>{ homeScreen.style.display='none'; diffSelection.style.display='flex'; });
 backBtn.addEventListener('click',()=>{ diffSelection.style.display='none'; homeScreen.style.display='flex'; });
 diffBtns.forEach(btn=>{
@@ -228,7 +238,7 @@ diffBtns.forEach(btn=>{
   });
 });
 
-// --- Index ---
+// Index Panel
 indexBtn.addEventListener('click',()=>{ indexPanel.style.top='30%'; startBtn.style.display='none'; indexBtn.style.display='none'; });
 closeBtn.addEventListener('click',()=>{ indexPanel.style.top='100%'; startBtn.style.display='flex'; indexBtn.style.display='flex'; });
 document.addEventListener('click', e=>{
@@ -238,18 +248,133 @@ document.addEventListener('click', e=>{
   }
 });
 
-// --- Pause ---
+// Pause
 pauseBtn.addEventListener('click',()=>{ if(gameRunning){ paused=true; currentScorePause.textContent="Score: "+score; pauseScreen.style.display='flex'; } });
 continuePauseBtn.addEventListener('click',()=>{ paused=false; pauseScreen.style.display='none'; requestAnimationFrame(updateBubbles); });
 endGamePauseBtn.addEventListener('click',()=>{ paused=false; pauseScreen.style.display='none'; endGame(); });
 window.addEventListener('blur',()=>{ if(gameRunning && !paused){ paused=true; currentScorePause.textContent="Score: "+score; pauseScreen.style.display='flex'; } });
 
-// --- End / Continue ---
+// End / Continue
 continueBtn.addEventListener('click',()=>{ endScreen.style.display='none'; homeScreen.style.display='flex'; });
 
-// --- Countdown/Game functions here (spawning bubbles, updating, ending game)... ---
-// Use your previous bubble spawn/update logic
+// Countdown
+function startCountdown(){
+  startTime = Date.now();
+  score = 0; lives = 3;
+  countdownEl.style.display='block';
+  let count=3;
+  countdownEl.textContent=count;
+  const interval=setInterval(()=>{
+    count--;
+    if(count>0) countdownEl.textContent=count;
+    else{
+      clearInterval(interval);
+      countdownEl.style.display='none';
+      scoreContainer.style.display='block';
+      pauseBtn.style.display='block';
+      startGame();
+    }
+  },1000);
+}
 
+// --- Game Logic ---
+function startGame(){
+  gameRunning=true; bubbles=[];
+  scoreEl.textContent="Score: "+score; livesEl.textContent="Lives: "+lives;
+  spawnBubble();
+  requestAnimationFrame(updateBubbles);
+}
+
+function spawnBubble(){
+  if(!gameRunning) return;
+  const elapsed=(Date.now()-startTime)/1000;
+  const speedMultiplier=1+elapsed/120;
+  const chance=Math.random();
+  const bubble=document.createElement('div'); bubble.classList.add('bubble');
+
+  if(chance<=0.001){ bubble.classList.add('instawin'); bubble.textContent="?12?"; bubble.dataset.type="instawin"; }
+  else if(chance<=0.016){ bubble.classList.add('invert'); bubble.textContent="!12!"; bubble.dataset.type="invert"; }
+  else if(chance<=0.0185){ bubble.classList.add('rare2x'); bubble.textContent="12×2"; bubble.dataset.type="2x"; }
+  else if(chance<=0.0285){ bubble.classList.add('rare144'); bubble.textContent="12²"; bubble.dataset.type="144"; }
+  else if(chance<=0.0485){ bubble.classList.add('triple'); bubble.textContent="3×12"; bubble.dataset.type="triple"; }
+  else if(chance<=0.0785){ bubble.classList.add('gravity'); bubble.textContent="<12>"; bubble.dataset.type="gravity"; }
+  else { bubble.textContent="12"; bubble.dataset.type="normal"; }
+
+  const size=Math.random()*60+60;
+  bubble.style.width=size+'px'; bubble.style.height=size+'px';
+  bubble.style.fontSize=(bubble.dataset.type==="144"?size/2.5:size/3)+'px';
+  bubble.style.left=Math.random()*(window.innerWidth-size)+'px';
+  bubble.style.top=(window.innerHeight-size)+'px';
+  bubble.dataset.speed=(Math.random()*1.5+1)*speedMultiplier;
+  document.body.appendChild(bubble);
+
+  const pop=()=>{
+    if(!gameRunning) return;
+    if(['2x','144','triple','gravity','invert','instawin'].includes(bubble.dataset.type)) popSound.currentTime=0, popSound.play();
+    bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble);
+
+    if(bubble.dataset.type==="2x") score*=2;
+    else if(bubble.dataset.type==="144") score+=144;
+    else if(bubble.dataset.type==="triple") for(let i=0;i<3;i++) spawnSingleBubble();
+    else if(bubble.dataset.type==="gravity"){
+      const bx=parseFloat(bubble.style.left)+parseFloat(bubble.style.width)/2;
+      const by=parseFloat(bubble.style.top)+parseFloat(bubble.style.height)/2;
+      bubbles.forEach(b=>{
+        b.style.left=(bx-parseFloat(b.style.width)/2)+'px';
+        b.style.top=(by-parseFloat(b.style.height)/2)+'px';
+      });
+    }
+    else if(bubble.dataset.type==="invert"){
+      document.body.style.filter = 'invert(1)'; score += 10;
+      setTimeout(()=>document.body.style.filter='',5000);
+    }
+    else if(bubble.dataset.type==="instawin"){ score += 999999999; }
+    else score++;
+
+    if(score>999999999) score=999999999;
+    scoreEl.textContent="Score: "+score;
+    if(score>highscore){ highscore=score; highscoreEl.textContent="Highscore: "+highscore; }
+  };
+
+  bubble.addEventListener('click',pop);
+  bubble.addEventListener('touchstart',pop);
+  bubbles.push(bubble);
+  setTimeout(spawnBubble,500/difficulty);
+}
+
+function spawnSingleBubble(){
+  if(!gameRunning) return;
+  const elapsed=(Date.now()-startTime)/1000;
+  const speedMultiplier=1+elapsed/120;
+  const bubble=document.createElement('div'); bubble.classList.add('bubble');
+  bubble.textContent="12"; bubble.dataset.type="normal";
+  const size=Math.random()*60+60;
+  bubble.style.width=size+'px'; bubble.style.height=size+'px'; bubble.style.fontSize=size/3+'px';
+  bubble.style.left=Math.random()*(window.innerWidth-size)+'px';
+  bubble.style.top=(window.innerHeight-size)+'px';
+  bubble.dataset.speed=(Math.random()*1.5+1)*speedMultiplier;
+  document.body.appendChild(bubble);
+  const pop=()=>{ if(!gameRunning) return; score++; if(score>999999999) score=999999999; scoreEl.textContent="Score: "+score; if(score>highscore){ highscore=score; highscoreEl.textContent="Highscore: "+highscore; } bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble); };
+  bubble.addEventListener('click',pop); bubble.addEventListener('touchstart',pop);
+  bubbles.push(bubble);
+}
+
+function updateBubbles(){
+  if(!gameRunning || paused) return;
+  bubbles.forEach(bubble=>{
+    const top=parseFloat(bubble.style.top);
+    bubble.style.top=top-parseFloat(bubble.dataset.speed)+'px';
+    if(top<=0){ lives--; livesEl.textContent="Lives: "+lives; bubble.remove(); bubbles=bubbles.filter(b=>b!==bubble); if(lives<=0) endGame(); }
+  });
+  requestAnimationFrame(updateBubbles);
+}
+
+function endGame(){
+  gameRunning=false; paused=false; bubbles.forEach(b=>b.remove()); bubbles=[];
+  scoreContainer.style.display='none'; pauseBtn.style.display='none';
+  finalScoreText.textContent="Your Score: "+score;
+  endScreen.style.display='flex';
+}
 </script>
 </body>
 </html>
